# slap-mapper

./: .buildinfo  .gitignore  LICENSE  README.md  core.html  genindex.html  idxmapstr.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: tests.yml
_sources/: index.rst.txt
_sources/aam/: aam.rst.txt
aam/: aam.html
docs/source/: conf.py  core.rst  idxmapstr.rst
paper/: paper.bib  paper.md
sample/: sample.py
slap_mapper/: __init__.py  core.py
slap_mapper/aam/: aam.py
src/slapmapper/: __init__.py  _idxmapstr.py  core.py
src/slapmapper/aam/: __init__.py  _geom.py  _smiles.py  aam.py  geom.py  utils.py
tests/: prod.xyz  react.xyz  test_slapaam.py
